tests/invalid/unify_mode_error.m
unify_mode_error.m:001: Warning: module should start with a `:- module' declaration.
unify_mode_error.m:001: Warning: interface for module `unify_mode_error' does
unify_mode_error.m:001:   not export anything.
