tests/invalid/unify_mode_error.err_exp
unify_mode_error.m:001: Warning: module should start with a `:- module' declaration.
unify_mode_error.m:001: Syntax error at token 'module': unexpected token at start of (sub)term.
unify_mode_error.m:001: Warning: interface for module `unify_mode_error' does
unify_mode_error.m:001:   not export anything.
For more information, recompile with `-E'.
